--- a/templates/loginform.html
+++ b/templates/loginform.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,12 @@
     <link rel="stylesheet" href="{% static 'styles\loginstyle.css' %}">
     <title>Logowanie</title>
 </head>
+
 <body>
     <div class="container" id="container">
         <div class="form-container sign-up">
-            <form>
+            <form method='POST'>
+                {% csrf_token %}
                 <h1>Stwórz konto!</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -24,12 +27,21 @@
                 <input type="text" placeholder="Nazwa użytkownika">
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Hasło">
+
+                {{ form.email }}
+                {{ form.captcha }}
+                <input type="submit" />
+
+
+
                 <button>Zarejestruj</button>
                 <button>Wróć na stronę główną</button>
             </form>
+
         </div>
         <div class="form-container sign-in">
-            <form>
+            <form method='POST'>
+                {% csrf_token %}
                 <h1>Zaloguj się!</h1>
                 <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
@@ -41,9 +53,13 @@
                 <span>lub skorzystaj z danych użytkownika</span>
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Hasło">
+
+                {{ form.email }}
+                {{ form.captcha }}
+
                 <a href="#">Zapomniałeś hasła?</a>
-                <button>Zaloguj</button>
-                <button>Wróć na stronę główną</button>
+                <button type="submit" >Zaloguj</button>
+                <button type="submit">Wróć na stronę główną</button>
             </form>
         </div>
         <div class="toggle-container">
@@ -63,4 +79,5 @@
     </div>
 </body>
 <script src="{% static 'scripts/loginscript.js' %}"></script>
+
 </html>
