--- a/static/styles/loginstyl.css
+++ b/static/styles/loginstyl.css
@@ -9,7 +9,7 @@
 
 body{
     background-color: #edddf8;
-    background: linear-gradient(to right, #8637bb, #491e66);
+    background: linear-gradient(to right, #ffffff, #491e66);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,7 +25,7 @@ body{
     overflow: hidden;
     width: 768px;
     max-width: 100%;
-    min-height: 600px;
+    min-height: 768px;
 }
 
 .container p{
