--- a/static/styles/mainstyl.css
+++ b/static/styles/mainstyl.css
@@ -151,3 +151,19 @@ transition: opacity 0.5s, transform 0.5s;
     grid-template-columns: repeat(2, 1fr);
     }
 }
+
+.sidebar{
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 250px;
+    background-color: #491e66;
+    padding: 0.4rem 0.8rem;
+    color: #fff;
+}
+
+.category_bar_element{
+    text-decoration: none;
+    color: #fff;
+}
