--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,14 @@
             </div>
             <a href="#" class="cart-link">🛒Koszyk</a>
         {% if user.is_authenticated %}
+            <button>
+                <a href="{% url 'users:user-profile' user.profile.id %}">Profil</a>
+            </button>
+            {% if user.is_superuser %}
+            <button>
+                <a href="{% url 'stuff:add_Book' %}">Dodaj książkę</a>
+            </button>
+            {% endif %}
         <button id="Button1">
             <a href="{% url 'users:logout' %}">Wyloguj</a>
         </button>
