--- a/users/templates/users/loginform.html
+++ b/users/templates/users/loginform.html
@@ -42,8 +42,9 @@
                 {% endfor %}
 
                 <a href="#">Zapomniałeś hasła?</a>
-                <button type="submit">Zaloguj</button>
-                <button type="submit">Wróć na stronę główną</button>
+                
+                <button type="submit" value="login"><input type="hidden" name="login">Zaloguj</button>
+                <button type="submit" >Wróć na stronę główną</button>
             </form>
         </div>
         <div class="toggle-container">
@@ -57,5 +58,7 @@
         </div>
     </div>
 </body>
+
+<script src="{% static 'scripts/loginscript.js'%}"></script>
 
 </html>
