Added styling for bookForm
bookForm styling, cartForm styling

--- a/templates/bookForm.html
+++ b/templates/bookForm.html
@@ -41,7 +41,7 @@
             </form>
         </div>
         <footer class="admin-footer">
-            &copy; 2024 Admin Panel
+            &copy; 2024 HaHaHardcovers
         </footer>
     </div>
 </body>
