--- a/templates/index.html
+++ b/templates/index.html
@@ -21,20 +21,20 @@
             </div>
             <a href="#" class="cart-link">🛒Koszyk</a>
         {% if user.is_authenticated %}
-            <button>
-                <a href="{% url 'users:user-profile' user.profile.id %}">Profil</a>
+            <button id="Button1">
+                <a href="{% url 'users:user-profile' user.profile.id %}" class="category_bar_element">Profil</a>
             </button>
             {% if user.is_superuser %}
-            <button>
-                <a href="{% url 'stuff:add_Book' %}">Dodaj książkę</a>
+            <button id="Button1">
+                <a href="{% url 'stuff:add_Book' %}" class="category_bar_element">Dodaj książkę</a>
             </button>
             {% endif %}
         <button id="Button1">
-            <a href="{% url 'users:logout' %}">Wyloguj</a>
+            <a href="{% url 'users:logout' %}" class="category_bar_element">Wyloguj</a>
         </button>
         {% else %}
         <button id="Button1">
-            <a href="{% url 'users:login_Register' %}">Zaloguj/Zarejestruj</a>
+            <a href="{% url 'users:login_Register' %}" class="category_bar_element">Zaloguj/Zarejestruj</a>
         </button>
         {% endif %}
         </div>
