--- a/templates/bookForm.html
+++ b/templates/bookForm.html
@@ -12,7 +12,7 @@
     <div class="admin-container">
         <header class="admin-header">
             <h1>Admin Panel/Add Book</h1>
-            <Button id="Button1">Logout</Button>
+            <Button id="Button1">Wyloguj</Button>
         </header>
         <aside class="admin-sidebar">
             <nav>
@@ -23,21 +23,22 @@
         </aside>
         <div class="admin-div">
             <!-- Tu co w srodku-->
-            <h2>Dodaj nową książkę</h2>
+            <h2 class="content-center">Dodaj nową książkę</h2>
             <form method="POST">
                 {% csrf_token %}
 
                 
                 {% for field in form %}
-                    <div class="">
+                    <div class="admin-add-book">
                         <label for="">{{field.label}} </label>
                         {{field}}
                     </div>
                 {% endfor %}
                 
                
-
-                <button type="submit">Add Book</button>
+                <div class="center-div">
+                <button type="submit" id="Button1">Add Book</button>
+                </div>
             </form>
         </div>
         <footer class="admin-footer">
