--- a/templates/cart.html
+++ b/templates/cart.html
@@ -16,17 +16,23 @@
                         <div class="col"><h4><b>🛒Koszyk</b></h4></div>
                         <div class="col align-self-center text-right text-muted">Ilość :</div>
                     </div>
-                </div>    
+                </div>  
+                {% for item in items %}
+                <div>
+                {% if item.book.imageURL %}
+                    <img src="{{ item.book.imageURL }}" alt="">
+                {% else %}
+                    <img src="{% static 'images/blank.png' %}" alt="">
+                {% endif %}
+            </div>
                 <div class="row">
-                    <h1>Książka 1</h1>
+                    <h1>{{item.book.title}}</h1>
+                    <p>{{item.book.price|floatformat:2}}</p>
+                    <p>Łącznie {{item.get_total}}</p>
                 </div>
-                <div class="row">
-                    <h1>Książka 2</h1>
-                </div>
-                <div class="row">
-                    <h1>Książka 3</h1>
-                </div>
-                <div class="back-to-shop"><a href="#"><span class="text-muted">Powrót do sklepu</span></a></div>
+                <p>Ilość:{{item.quantity}}</p>
+                {% endfor %}
+                <div class="back-to-shop"><a href="{% url 'stuff:stuff_list' %}"><span class="text-muted">Powrót do sklepu</span></a></div>
             </div>
             <div class="col-md-4 summary">
                 <div><h5><b>Podsumowanie</b></h5></div>
@@ -34,10 +40,12 @@
                 <div class="row">
                 </div>
                 <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
-                    <div class="col">Łączna cena</div>
+                    <div class="col">Ilość przedmiotów w koszyku {{order.get_cart_items}}</div>
+                    <div class="col">Łączna cena {{order.get_cart_total}}</div>
                     <div class="col text-right">PLN cena</div>
+                    
                 </div>
-                <button class="btn">Podsumowanie</button>
+                <button class="btn"><a href="{% url 'stuff:checkout' %}">Podsumowanie</a></button>
             </div>
         </div>
         
