--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                 <input type="text" id="searchInput1" placeholder="Search...">
                 <button id="Button2" type="submit">Search</button>
             </div>
-            <a href="#" class="cart-link">🛒Koszyk</a>
+            <a href="{% url 'stuff:cart' %}" class="cart-link">🛒Koszyk</a>
         {% if user.is_authenticated %}
             <button id="Button1">
                 <a href="{% url 'users:user-profile' user.profile.id %}" class="category_bar_element">Profil</a>
